[gd_scene load_steps=8 format=3 uid="uid://cqtderr4jbub3"]

[ext_resource type="Script" uid="uid://b4db6eeeehvfd" path="res://Systems/Gun/gun.gd" id="1_vwvcx"]
[ext_resource type="Texture2D" uid="uid://0pmfkmmgftnw" path="res://Sprites/gun.png" id="2_0rbit"]
[ext_resource type="PackedScene" uid="uid://ut51d0u04hri" path="res://signal_receiver.tscn" id="3_t5ng2"]
[ext_resource type="Texture2D" uid="uid://cap7s2ipr0rg0" path="res://Sprites/barrel.png" id="5_0rbit"]
[ext_resource type="Script" uid="uid://cklwast5n2502" path="res://object_hover.gd" id="6_0rbit"]
[ext_resource type="PackedScene" uid="uid://ccxrvty1mk6wt" path="res://Overlays/SectorMap/sectormap_blip_connector.tscn" id="7_ccd6o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fbmh6"]
size = Vector2(60, 41)

[node name="Gun" type="Node2D" groups=["ExternalSystem", "HammerCanEdit", "MustBeSaved", "PliersCanEdit"]]
script = ExtResource("1_vwvcx")

[node name="Barrel" type="Node2D" parent="."]
position = Vector2(0, -25)

[node name="Sprite2D" type="Sprite2D" parent="Barrel"]
position = Vector2(-1.4305115e-06, 32)
texture = ExtResource("5_0rbit")

[node name="SpawnPosition" type="Node2D" parent="Barrel"]
position = Vector2(0, 49)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0rbit")

[node name="hoverRegion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hoverRegion"]
position = Vector2(0, -11.5)
shape = SubResource("RectangleShape2D_fbmh6")

[node name="SignalReceiver" parent="." instance=ExtResource("3_t5ng2")]

[node name="Reticle" type="Node2D" parent="."]

[node name="StarmapBlipConnector" parent="Reticle" instance=ExtResource("7_ccd6o")]

[node name="LockOn" type="Node2D" parent="."]

[node name="StarmapBlipConnector" parent="LockOn" instance=ExtResource("7_ccd6o")]

[node name="ObjectHover" type="Node" parent="." node_paths=PackedStringArray("hoverArea", "spriteToShade")]
script = ExtResource("6_0rbit")
hoverFilter = Array[String](["Pliers", "Wrench"])
hoverArea = NodePath("../hoverRegion")
spriteToShade = NodePath("../Sprite2D")
metadata/_custom_type_script = "uid://cklwast5n2502"
